RESOLVED FIXED69861
[Mac] Small embedded PDFs are not fully repainted when scrolling
https://bugs.webkit.org/show_bug.cgi?id=69861
Summary [Mac] Small embedded PDFs are not fully repainted when scrolling
Alexey Proskuryakov
Reported 2011-10-11 12:42:48 PDT
When BuiltInPDFView::paintContent decides which pages to draw, it should account for centering.
Attachments
proposed fix (2.49 KB, patch)
2011-10-11 12:45 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2011-10-11 12:45:13 PDT
Created attachment 110559 [details] proposed fix
Brian Weinstein
Comment 2 2011-10-11 14:11:48 PDT
Comment on attachment 110559 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=110559&action=review > Source/WebKit2/WebProcess/Plugins/PDF/BuiltInPDFView.cpp:293 > +printf("\n"); Might want to get rid of this :-).
Alexey Proskuryakov
Comment 3 2011-10-11 14:13:46 PDT
Note You need to log in before you can comment on or make changes to this bug.