        [Mac] Small embedded PDFs are not fully repainted when scrolling         https://bugs.webkit.org/show_bug.cgi?id=69861

Reviewed by Anders Carlsson.

        * WebProcess/Plugins/PDF/BuiltInPDFView.cpp: (WebKit::BuiltInPDFView::paintContent):
        Account for vertical centering when deciding which pages to paint.



Canonical link: https://commits.webkit.org/85917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97184 268f45cc-cd09-0410-ab3c-d52691b4dbfc